<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:paddingStart="4dp"
    android:paddingEnd="4dp">

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/content_report"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvReportingTimeAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/report_time_at"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btViewPost"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvReportingTimeAt"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button_selector_full"
        android:gravity="center"
        android:text="@string/view_post"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:backgroundTint="@null" />

</RelativeLayout>