<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_user_72_dark" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="310dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        app:columnCount="2"
        app:rowCount="1">

        <TextView
            android:id="@+id/tvFullName"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvRequestTimeAt"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/friend_request_time_at"
            android:textSize="16sp"
            android:textStyle="italic"
            android:paddingTop="4dp"/>
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="38dp"
        app:columnCount="2"
        app:rowCount="1">

        <Button
            android:id="@+id/btAccept"
            android:textColor="@color/green_dark"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/accept"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btDecline"
            android:textColor="@color/green_dark"
            android:background="@color/white"
            android:text="@string/decline"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>