<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_user_72_dark" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="310dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="38dp"
        app:columnCount="2"
        app:rowCount="1">

        <Button
            android:id="@+id/btViewProfile"
            android:textColor="@color/green_dark"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/view_profile"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btSendMessage"
            android:textColor="@color/green_dark"
            android:background="@color/white"
            android:layout_width="126dp"
            android:text="@string/send_message"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>