<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_user_72_dark" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/ivAvatar"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_columnWeight="1" />

    <TextView
        android:id="@+id/tvMessageSendingAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="4dp"
        android:text="@string/message_sending_at"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/ivAvatar"
        android:background="@color/white"
        android:text="@string/content_message"
        android:textColor="@color/green_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/ivMediaMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTextMessage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/ivAvatar"
        android:scaleType="fitStart"/>

</RelativeLayout>