<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_user_72_dark" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/ivAvatar"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/name_group"
        android:textSize="18sp"
        android:textStyle="bold" />


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvFullName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        android:layout_toEndOf="@+id/ivAvatar"
        app:columnCount="2"
        app:rowCount="1">

        <Button
            android:id="@+id/btViewGroup"
            android:text="@string/view_group"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginRight="4px"
            android:textSize="14dp"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button_selector_full"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btDoSomething"
            android:layout_width="85dp"
            android:layout_marginLeft="4px"
            android:background="@drawable/custom_button_selector_line"
            android:gravity="center"
            android:text="@string/do_something"
            android:textColor="@color/green_dark"
            android:textSize="14dp"
            app:backgroundTint="@null"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>