<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_user_72_dark" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/ivAvatar"
        app:columnCount="1"
        app:rowCount="2">

        <TextView
            android:id="@+id/tvFullNameAndContent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/full_name_and_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tvNotifyTimeAt"
            android:gravity="center_vertical"
            android:text="@string/friend_request_time_at"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>