<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AdminViewReportPostActivity"
    android:orientation="vertical">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@mipmap/ic_arrow_left_72_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/all_report_about_post"
            android:textColor="@color/green_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_columnWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="64dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/avatar"
                android:src="@mipmap/ic_user_72_dark" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/ivAvatar"
                android:text="@string/full_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPostingTimeAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFullName"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/ivAvatar"
                android:text="@string/posting_time_at"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivMode"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFullName"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@+id/tvPostingTimeAt"
                android:src="@mipmap/ic_global_72_dark" />

            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_more_72_dark" />

            <TextView
                android:id="@+id/tvPostText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivAvatar"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivPostImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPostText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="2dp"
                android:scaleType="fitStart"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAllReport"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>