<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glMyProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:rowCount="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civAvatar"
            android:layout_width="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@mipmap/ic_user_72_dark"
            android:padding="8dp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tvFullname"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:rowCount="1">

        <ImageView
            android:id="@+id/ibGroup"
            android:layout_width="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@mipmap/ic_user_groups_72_full"
            android:padding="8dp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tvGroup"
            android:gravity="center"
            android:text="@string/group"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glPolicy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:rowCount="1">

        <ImageView
            android:id="@+id/ibPolicy"
            android:layout_width="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@mipmap/ic_policy_72_dark"
            android:padding="8dp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tvPolicy"
            android:gravity="center"
            android:text="@string/policy"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glLogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:rowCount="1">

        <ImageView
            android:id="@+id/ibLogout"
            android:layout_width="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@mipmap/ic_logout_72_dark"
            android:padding="8dp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tvLogout"
            android:gravity="center"
            android:text="@string/logout"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>